<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/totalGames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        android:text="@string/gamesPlayedHeader"/>

    <TextView
        android:id="@+id/totalWins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="20dp"
        android:text="@string/gamesWonHeader"/>

    <TextView
        android:id="@+id/winPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/winPercentHeader"/>
</LinearLayout>
